@@ -63,7 +63,7 @@ public:
 	boost::filesystem::path info_path (int, Eyes) const;
 	boost::filesystem::path internal_video_mxf_dir () const;
 	boost::filesystem::path internal_video_mxf_filename () const;
-	boost::filesystem::path audio_analysis_path (boost::shared_ptr<const AudioContent>) const;
+	boost::filesystem::path audio_analysis_dir () const;
 
 	boost::filesystem::path video_mxf_filename () const;
 	boost::filesystem::path audio_mxf_filename () const;
